# pluck-hair

./: .gitignore
backend/: README.md  docker-compose.yml  main.py  pyproject.toml  todolist.md
backend/config/: settings.dev.yaml  settings.yaml
backend/data/: pluck_dev.db
backend/src/: config.py
backend/src/api/: app.py  dependencies.py
backend/src/api/routes/: detections.py  events.py  health.py
backend/src/core/: __init__.py
backend/src/core/camera/: __init__.py  base.py  daheng.py  mock.py
backend/src/core/vision/: __init__.py  pipeline.py  types.py
backend/src/core/vision/steps/: __init__.py  base.py  postprocess.py  preprocess.py  tiling.py  yolo_detect.py
backend/src/scheduler/: __init__.py  storage_saver.py  task_manager.py
backend/src/scheduler/tasks/: __init__.py  base.py  conditions.py  detection.py
backend/src/services/: detection_service.py
backend/src/storage/: interfaces.py  local_storage.py  models.py  postgres_db.py  sqlite_db.py
backend/tests/: conftest.py  test_api.py  test_camera.py  test_config.py  test_pipeline.py  test_storage.py  test_task_manager.py
camera-fun/: main.py
docs/: PLC-comunicate.md  QA.md  architecture-decisions.md  backend-design.md  requirement.md  system-architecture.md  workflow-diagrams-noMoveIt.md  workflow-diagrams.md
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts
pluck_ws/: pyproject.toml
pluck_ws/config/: camera.yaml  hand_eye.yaml  multi_arm.yaml
train/baseline/: config.json  pyproject.toml
train/baseline/src/: train-model.py
train/baseline/src/data_loader/: __init__.py  voc_dataloader.py
(+61 files in other folders)
